# BialJam2023

./: Animation.cpp  Animation.h  CMakeLists.txt  Collectible.cpp  Collectible.h  Game.cpp  Game.h  Level.cpp  Level.h  Menu.cpp  Menu.h  Notes.txt  Player.cpp  Player.h  README.md  ResourceCache.cpp  ResourceCache.h  Scene.cpp  Scene.h  Utilities.cpp  Utilities.h  main.cpp  zerrors.h  zstr.h
Runtime/Graphics/Collectible/: collectible-wiggle.json  collectible.json
Runtime/Graphics/Door/: door-open-close.json
Runtime/Graphics/Fonts/: charset.txt
Runtime/Graphics/Player/: player-glide.json  player-grab.json  player-hurt.json  player-idle.json  player-jump-down.json  player-run.json  player-slide.json  player.json
Runtime/Graphics/Viking/: SpeechBubble.json
Runtime/Levels/: .gitignore  Level0-0.json  Level0-1.json  Level0-2.json  Level0-3.json  Level0-4.json  Level0-5.json  Level0-6.json  Level0-7.json  Level0-8.json  Level0.json  Level1-0.json  Level1-1.json  Level1-2.json  Level1-3.json  Level1-4.json  Level1-5.json  Level1-6.json  Level1.json  Level2-0.json  Level2.json  Level4.json  Level5.json  Level7.json  Levels.json  Map0.ldtk  Map1.ldtk  Map2.ldtk
Runtime/Levels/Map0/simplified/Level_0/: IntGrid.csv  data.json
Runtime/Levels/Map0/simplified/Level_1/: IntGrid.csv  data.json
Runtime/Levels/Map0/simplified/Level_2/: IntGrid.csv  data.json
Runtime/Levels/Map0/simplified/Level_3/: IntGrid.csv  data.json
Runtime/Levels/Map0/simplified/Level_4/: IntGrid.csv  data.json
Runtime/Levels/Map0/simplified/Level_5/: IntGrid.csv  data.json
Runtime/Levels/Map0/simplified/Level_6/: IntGrid.csv  data.json
Runtime/Levels/Map0/simplified/Level_7/: IntGrid.csv  data.json
Runtime/Levels/Map0/simplified/Level_8/: IntGrid.csv  data.json
Runtime/Levels/Map1/simplified/Level_0/: data.json
Runtime/Levels/Map1/simplified/Level_1/: IntGrid.csv  data.json
Runtime/Levels/Map1/simplified/Level_2/: IntGrid.csv  data.json
Runtime/Levels/Map1/simplified/Level_3/: IntGrid.csv  data.json
Runtime/Levels/Map1/simplified/Level_4/: IntGrid.csv  data.json
Runtime/Levels/Map1/simplified/Level_5/: IntGrid.csv  data.json
Runtime/Levels/Map1/simplified/Level_6/: IntGrid.csv  data.json
Runtime/Levels/Map2/simplified/Level_0/: IntGrid.csv  data.json
Runtime/Scenes/: DeadScreen.json  GameEndScreen.json  LevelEndScreen.json  StartScreen.json  cry.json  cry.pdn
Runtime/Scenes/firework-1/: firework-1.json
Runtime/Scenes/firework-2/: firework-2.json
Runtime/Screens/: DeadScreen.json  GameEndScreen.json  LevelEndScreen.json  StartScreen.json  StartScreen.pdn  cry.json  cry.pdn
